fix(ReaderMode): prevent all style bleed

--- a/packages/common/src/css/base.css
+++ b/packages/common/src/css/base.css
@@ -4,22 +4,12 @@
  */
 
 @layer base {
-  :host {
-    /*
-     * Improve readability by reverting websites trying to "fix" font
-     * smoothing.
-     * See https://usabilitypost.com/2012/11/05/stop-fixing-font-smoothing/
-     *
-     * Also resets values for other CSS properties that penetrate into
-     * Shadow DOM. Full list of inherited properties:
-     * https://web.dev/learn/css/inheritance
-     */
-    @apply subpixel-antialiased cursor-[initial] tracking-[initial] indent-[initial];
-    text-align: initial;
-    text-transform: initial;
-    font-style: initial;
-    word-spacing: initial;
-    white-space: initial;
+  /*
+   * Prevent any host page's styles from bleeding into shadow dom (i.e inherited
+   * properties like font-style)
+   */
+  :host > div {
+    all: initial;
   }
 
   * {
@@ -32,37 +22,5 @@
    */
   .sr-only {
     @apply top-0;
-  }
-
-  .link {
-    @apply inline-flex cursor-pointer items-center gap-2
-    border-none bg-transparent text-left text-black
-    active:underline enabled:hover:text-blue-300 disabled:!ring-0 dark:text-gray-200;
-  }
-
-  a.link {
-    @apply hover:text-blue-400 dark:hover:text-blue-300;
-  }
-
-  .link[aria-current]:not(.aria-handled) {
-    @apply text-blue-300;
-  }
-
-  .icon {
-    @apply active:bg-blue-100 disabled:!cursor-not-allowed
-    disabled:!text-gray-400 disabled:hover:!text-gray-400
-    dark:active:bg-blue-500 disabled:dark:!text-neutral-600
-    disabled:hover:dark:!text-neutral-600;
-  }
-
-  /* Hide up/down arrows in Gecko */
-  [type='number'].no-arrows {
-    -moz-appearance: textfield;
-  }
-
-  /* Hide up/down arrows in Webkit */
-  [type='number'].no-arrows::-webkit-outer-spin-button,
-  [type='number'].no-arrows::-webkit-inner-spin-button {
-    @apply m-0 appearance-none;
   }
 }
